[project]
name = "queuify"
dynamic = ["version"]
description = "A lightweight, asyncio-compatible queue library for Python"
keywords = ["python", "queue", "asyncio"]
authors = [
    { name = "Mehdi Samsami", email = "mehdisamsami@live.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "watchfiles>=0.24.0,<1.0.0",
]

[tool.setuptools]
packages = { find = { where = ["src"], include = ["queuify"] } }

[tool.setuptools.dynamic]
version = { attr = "queuify.__version__" }

[project.optional-dependencies]
redis = [
    "redis>=4.3.0",
]
azure-storage = [
    "azure-storage-queue>=12.2.0",
]
sqs = [
    "boto3>=1.33.0,<2.0.0",
    "aiobotocore>=2.8.0,<3.0.0",
]

[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "coverage>=7.6.4",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.2",
    "types-aiobotocore[sqs]>=2.15.2.post3",
    "types-aiofiles>=24.1.0.20240626",
    "types-boto3[sqs]>=1.35.76",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
exclude=["tests"]
namespace_packages = false
files = ["src/queuify/**/*.py"]
check_untyped_defs = true
disable_error_code = ["empty-body"]
disallow_untyped_defs = false
disallow_subclassing_any = false
strict = true

[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "botocore.*",
    "aiobotocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore"]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 130

[tool.black]
line-length = 130

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
