[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queuify"
dynamic = ["version"]
description = "A lightweight, asyncio-compatible queue library for Python"
keywords = ["python", "queue", "asyncio"]
authors = [
    { name = "Mehdi Samsami", email = "mehdisamsami@live.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "watchfiles>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/msamsami/queuify"
Source = "https://github.com/msamsami/queuify"

[tool.hatch.version]
path = "src/queuify/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/queuify"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
redis = [
    "redis>=4.3.0",
]

[dependency-groups]
dev = [
    "bumpversion",
    "isort",
    "mypy",
    "pre-commit",
    "pytest-asyncio",
    "pytest",
    "python-dotenv",
    "ruff",
    "types-aiofiles>=24.1.0.20240626",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
exclude=["tests"]
namespace_packages = false
files = ["src/queuify/**/*.py"]
check_untyped_defs = true
disable_error_code = ["empty-body"]
disallow_untyped_defs = false
disallow_subclassing_any = false
strict = true

[[tool.mypy.overrides]]
module = [
    "aiofiles",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore"]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 130

[tool.black]
line-length = 130

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
